Block and Client code sweep (#2194)