@@ -45,8 +45,8 @@ public class CinderFurnaceBlockEntity extends FurnaceBlockEntity {
 			ItemStack itemstack = te.items.get(1);
 
 			if (te.isBurning() || !itemstack.isEmpty() && !te.items.get(0).isEmpty()) {
-				RecipeHolder<?> irecipe = level.getRecipeManager().getRecipeFor(RecipeType.SMELTING, new SingleRecipeInput(te.items.getFirst()), level).orElse(null);
-				if (irecipe != null && !te.isBurning() && te.canBurn(irecipe.value())) {
+				RecipeHolder<?> recipe = level.getRecipeManager().getRecipeFor(RecipeType.SMELTING, new SingleRecipeInput(te.items.getFirst()), level).orElse(null);
+				if (recipe != null && !te.isBurning() && te.canBurn(level, recipe.value())) {
 					te.litTime = te.getBurnDuration(itemstack);
 					te.litDuration = te.litTime;
 
@@ -65,14 +65,14 @@ public class CinderFurnaceBlockEntity extends FurnaceBlockEntity {
 					}
 				}
 
-				if (irecipe != null && te.isBurning() && te.canBurn(irecipe.value())) {
+				if (recipe != null && te.isBurning() && te.canBurn(level, recipe.value())) {
 					// TF - cook faster
-					te.cookingProgress += te.getCurrentSpeedMultiplier();
+					te.cookingProgress += te.getCurrentSpeedMultiplier(level);
 
 					if (te.cookingProgress >= te.cookingTotalTime) { // TF - change to geq since we can increment by >1
 						te.cookingProgress = 0;
-						te.cookingTotalTime = te.getRecipeBurnTime();
-						te.smeltItem(irecipe.value());
+						te.cookingTotalTime = te.getRecipeBurnTime(level);
+						te.smeltItem(level, recipe.value());
 						flag1 = true;
 					}
 				} else {
@@ -89,7 +89,7 @@ public class CinderFurnaceBlockEntity extends FurnaceBlockEntity {
 
 			// TF - occasionally cinderize nearby logs
 			if (te.isBurning() && te.litTime % 5 == 0) {
-				te.cinderizeNearbyLog();
+				te.cinderizeNearbyLog(level, pos);
 			}
 		}
 
@@ -104,26 +104,27 @@ public class CinderFurnaceBlockEntity extends FurnaceBlockEntity {
 	}
 
 	// [VanillaCopy] of super, only using SMELTING IRecipeType
-	protected int getRecipeBurnTime() {
-		return this.getLevel().getRecipeManager().getRecipeFor(RecipeType.SMELTING, new SingleRecipeInput(this.items.getFirst()), this.getLevel()).map(recipeHolder -> recipeHolder.value().getCookingTime()).orElse(200);
+	protected int getRecipeBurnTime(Level level) {
+		return level.getRecipeManager().getRecipeFor(RecipeType.SMELTING, new SingleRecipeInput(this.items.getFirst()), level).map(recipeHolder -> recipeHolder.value().getCookingTime()).orElse(200);
 	}
 
-	private void cinderizeNearbyLog() {
-		RandomSource rand = this.getLevel().getRandom();
+	@SuppressWarnings("deprecation")
+	private void cinderizeNearbyLog(Level level, BlockPos origin) {
+		RandomSource rand = level.getRandom();
 
 		int dx = rand.nextInt(2) - rand.nextInt(2);
 		int dy = rand.nextInt(2) - rand.nextInt(2);
 		int dz = rand.nextInt(2) - rand.nextInt(2);
-		BlockPos pos = this.getBlockPos().offset(dx, dy, dz);
+		BlockPos pos = origin.offset(dx, dy, dz);
 
-		if (this.getLevel().hasChunkAt(pos)) {
-			BlockState nearbyBlock = this.getLevel().getBlockState(pos);
+		if (level.hasChunkAt(pos)) {
+			BlockState nearbyBlock = level.getBlockState(pos);
 
 			if (!nearbyBlock.is(TFBlocks.CINDER_LOG) && nearbyBlock.is(BlockTags.LOGS)) {
-				this.getLevel().setBlock(pos, this.getCinderLog(dx, dy, dz), 2);
-				this.getLevel().levelEvent(2004, pos, 0);
-				this.getLevel().levelEvent(2004, pos, 0);
-				this.getLevel().playSound(null, pos, SoundEvents.FIRE_AMBIENT, SoundSource.BLOCKS, 1.0F, 1.0F);
+				level.setBlock(pos, this.getCinderLog(dx, dy, dz), 2);
+				level.levelEvent(2004, pos, 0);
+				level.levelEvent(2004, pos, 0);
+				level.playSound(null, pos, SoundEvents.FIRE_AMBIENT, SoundSource.BLOCKS, 1.0F, 1.0F);
 			}
 		}
 	}
@@ -150,31 +151,32 @@ public class CinderFurnaceBlockEntity extends FurnaceBlockEntity {
 	/**
 	 * What is the current speed multiplier, as an int.
 	 */
-	private int getCurrentSpeedMultiplier() {
-		return this.getCurrentMultiplier(2);
+	private int getCurrentSpeedMultiplier(Level level) {
+		return this.getCurrentMultiplier(level, 2);
 	}
 
 	/**
 	 * Returns a number that is based on the number of nearby logs divided by the factor given.
 	 */
-	private int getCurrentMultiplier(int factor) {
-		int logs = this.countNearbyLogs();
+	private int getCurrentMultiplier(Level level, int factor) {
+		int logs = this.countNearbyLogs(level);
 
 		if (logs < factor) {
 			return 1;
 		} else {
-			return (logs / factor) + (this.getLevel().getRandom().nextInt(factor) >= (logs % factor) ? 0 : 1);
+			return (logs / factor) + (level.getRandom().nextInt(factor) >= (logs % factor) ? 0 : 1);
 		}
 	}
 
-	private int countNearbyLogs() {
+	@SuppressWarnings("deprecation")
+	private int countNearbyLogs(Level level) {
 		int count = 0;
 
 		for (int dx = -1; dx <= 1; dx++) {
 			for (int dy = -1; dy <= 1; dy++) {
 				for (int dz = -1; dz <= 1; dz++) {
 					BlockPos pos = getBlockPos().offset(dx, dy, dz);
-					if (this.getLevel().hasChunkAt(pos) && this.getLevel().getBlockState(pos).getBlock() == TFBlocks.CINDER_LOG.get()) {
+					if (level.hasChunkAt(pos) && level.getBlockState(pos).is(TFBlocks.CINDER_LOG.get())) {
 						count++;
 					}
 				}
@@ -186,11 +188,11 @@ public class CinderFurnaceBlockEntity extends FurnaceBlockEntity {
 
 	// [VanillaCopy] of superclass ver, changes noted
 	//@Override
-	protected boolean canBurn(Recipe<?> recipe) {
+	protected boolean canBurn(Level level, Recipe<?> recipe) {
 		if (this.items.get(0).isEmpty()) {
 			return false;
 		} else {
-			ItemStack itemstack = recipe.getResultItem(this.getLevel().registryAccess());
+			ItemStack itemstack = recipe.getResultItem(level.registryAccess());
 
 			if (itemstack.isEmpty()) {
 				return false;
@@ -198,7 +200,7 @@ public class CinderFurnaceBlockEntity extends FurnaceBlockEntity {
 				ItemStack itemstack1 = this.items.get(2);
 				if (itemstack1.isEmpty()) return true;
 				if (!itemstack1.is(itemstack.getItem())) return false;
-				int result = itemstack1.getCount() + getMaxOutputStacks(items.get(0), itemstack); // TF - account for multiplying
+				int result = itemstack1.getCount() + getMaxOutputStacks(level, this.items.getFirst(), itemstack); // TF - account for multiplying
 				return result <= this.getMaxStackSize() && result <= itemstack1.getMaxStackSize(); // Forge fix: make furnace respect stack sizes in furnace recipes
 			}
 		}
@@ -207,20 +209,20 @@ public class CinderFurnaceBlockEntity extends FurnaceBlockEntity {
 	/**
 	 * Return the max number of items in the output stack, given our current multiplier
 	 */
-	public int getMaxOutputStacks(ItemStack input, ItemStack output) {
-		if (this.canMultiply(input, output)) {
-			return output.getCount() * this.getCurrentMaxSmeltMultiplier();
+	public int getMaxOutputStacks(Level level, ItemStack input, ItemStack output) {
+		if (this.canMultiply(input)) {
+			return output.getCount() * this.getCurrentMaxSmeltMultiplier(level);
 		} else {
 			return output.getCount();
 		}
 	}
 
 	// [VanillaCopy] superclass, using our own canSmelt and multiplying output
-	public void smeltItem(Recipe<?> recipe) {
-		if (this.canBurn(recipe)) {
-			ItemStack itemstack = this.items.get(0);
-			ItemStack itemstack1 = recipe.getResultItem(this.getLevel().registryAccess());
-			itemstack1.setCount(itemstack1.getCount() * this.getCurrentSmeltMultiplier());
+	public void smeltItem(Level level, Recipe<?> recipe) {
+		if (this.canBurn(level, recipe)) {
+			ItemStack itemstack = this.items.getFirst();
+			ItemStack itemstack1 = recipe.getResultItem(level.registryAccess());
+			itemstack1.setCount(itemstack1.getCount() * this.getCurrentSmeltMultiplier(level));
 			ItemStack itemstack2 = this.items.get(2);
 
 			if (itemstack2.isEmpty()) {
@@ -237,21 +239,21 @@ public class CinderFurnaceBlockEntity extends FurnaceBlockEntity {
 		}
 	}
 
-	private boolean canMultiply(ItemStack input, ItemStack output) {
+	private boolean canMultiply(ItemStack input) {
 		return input.is(ItemTags.LOGS) || input.is(Tags.Items.ORES);
 	}
 
 	/**
 	 * What is the current speed multiplier, as an int.
 	 */
-	private int getCurrentSmeltMultiplier() {
-		return this.getCurrentMultiplier(SMELT_LOG_FACTOR);
+	private int getCurrentSmeltMultiplier(Level level) {
+		return this.getCurrentMultiplier(level, SMELT_LOG_FACTOR);
 	}
 
 	/**
 	 * What is the current speed multiplier, as an int.
 	 */
-	private int getCurrentMaxSmeltMultiplier() {
-		return (int) Math.ceil((float) this.countNearbyLogs() / (float) SMELT_LOG_FACTOR);
+	private int getCurrentMaxSmeltMultiplier(Level level) {
+		return (int) Math.ceil((float) this.countNearbyLogs(level) / (float) SMELT_LOG_FACTOR);
 	}
 }
